# voxart

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: Plotting.ipynb  dev.ipynb  examples.ipynb  initial_explore.ipynb  profiling.ipynb
tests/: __init__.py  test_general.py  test_geometry.py  test_plots.py  test_search.py
voxart/: __init__.py  geometry.py  plots.py  search.py
