[tool.poetry]
name = "voxart"
version = "0.1.0"
description = "Tools for creating voxel art to be 3D printed"
authors = ["Patrick Riley <patriley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
